--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.4",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
   },
@@ -21,7 +20,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
