--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://api.openweathermap.org/data/2.5/
-API_KEY=ce026dc549f7e825335d37270df52b23
+VITE_BASE_URL=https://api.openweathermap.org/data/2.5/
+VITE_API_KEY=ce026dc549f7e825335d37270df52b23
